--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+
+		<!-- Add icon library -->
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	</head>
 	<body>
 
@@ -17,8 +20,7 @@
 		  <li class="icon">
 		    <a href="javascript:void(0);" onclick="myFunction()">&#9776;</a>
 		  </li>
-		</ul>
-		-->
+		</ul-->
 		<!-- Header -->
 			<section id="header">
 				<header>
@@ -27,35 +29,23 @@
 						<h1 class="thick">Hello!</h1>
 						<p>Glad you found my website.</p>
 						<p>If you're looking for my resume, click <a href="assets/resume.pdf">here</a>.<br/>Otherwise, feel free to explore more about me.</p>
+						<a href="http://facebook.com/az359" class="fa fa-facebook"></a>
+						<a href="http://twitter.com/jz359" class="fa fa-twitter"></a>
+						<a href="http://linkedin.com/in/jz359" class="fa fa-linkedin"></a>
+						<a href="http://github.com/jz359" class="fa fa-github"></a>
 					</div>
 					<!--<h1 id="logo"><a href="index.html">Andy Zhang</a></h1>-->
 				</header>
 			</section>
 
 			<section id="main">
-				<p><br/><br/>I'm an undergrad at Cornell University studying Computer Science and Electrical Engineering.<br/>My favorite topics include machine vision/learning, signal processing, and computational theory.<br/><br/>Here's some stuff I've done:<br/><br/><br/></p>
-
+				<p><br/><br/>I'm an undergrad at Cornell University studying Computer Science and Electrical Engineering.<br/>My favorite topics include machine vision/learning, signal processing, and computational theory.<br/><br/>In general, my life is composed of CS and non-CS things.<br/><br/><br/></p>
 			</section>
 
-			<section id="projects">
-					<div class="project">
-						<img src="images/blood.png" width="220" height="130">
-						<p class="thick">Robot Doctor Eyes<br/><br/></p>
-						<p>a Python/OpenCV module that processes microscope images of white blood cells and classifies them.<br/></p>
-					</div>
-
-					<div class="project">
-						<img src="images/critterworld2.png" width="220" height="130">
-						<p class="thick">A Whole New World<br/><br/></p>
-						<p>built with Java, complete with a Critter language, compiler, interpreter, simulator, and more.<br/></p>
-					</div>
-
-					<div class="project">
-						<img src="images/magafood.png" width="220" height="130">
-						<p class="thick">Yelp ft. Google Maps<br/><br/></p>
-						<p>a fun Android project that lets you drool over pictures of food from nearby restaurants.</p>
-					</div>
-			</section>
+			<ul>
+				<a href="projects.html"><button class="button"><span>projects</span></button></a>
+				<a href="hobbies.html"><button class="button"><span>hobbies</span></button></a>
+			</ul>
 
 			<!--
 			<section id="hobbies">
