--- a/hobbies.html
+++ b/hobbies.html
@@ -26,66 +26,39 @@
 				<header>
 					<div id="circle">
 						<a href="index.html"><img src="images/me.png" class="curve"></a>
-						<h1 class="thick">Hello!</h1>
-						<p>Glad you found my website.</p>
-						<p>If you're looking for my resume, click <a href="assets/resume.pdf">here</a>.<br/>Otherwise, feel free to explore more about me.</p>
+						<h1 class="thick">I do other things too.</h1>
+						<p>Life outside of computer science is what keeps me sane.</p>
 						<a href="http://facebook.com/az359" class="fa fa-facebook"></a>
 						<a href="http://twitter.com/jz359" class="fa fa-twitter"></a>
-						<a href="http://linkedin.com/in/jz359" class="fa fa-linkedin"></a>
-						<a href="http://github.com/jz359" class="fa fa-github"></a>
 					</div>
 					<!--<h1 id="logo"><a href="index.html">Andy Zhang</a></h1>-->
 				</header>
 			</section>
 
 			<section id="main">
-				<p><br/><br/>I'm an undergrad at Cornell University studying Computer Science and Electrical Engineering.<br/>My favorite topics include machine vision/learning, signal processing, and computational theory.<br/><br/>In general, my life is composed of CS and non-CS things.<br/><br/><br/></p>
-			</section>
-
-			<ul>
-				<a href="projects.html"><button class="button"><span>projects</span></button></a>
-				<a href="hobbies.html"><button class="button"><span>hobbies</span></button></a>
-			</ul>
-			<section id="projects">
-					<div class="project">
-						<img src="images/blood.png" width="220" height="130" class="curve">
-						<p class="thick">Robot Doctor Eyes<br/><br/></p>
-						<p>a Python/OpenCV module that processes microscope images of white blood cells and classifies them.<br/></p>
-					</div>
-
-					<div class="project">
-						<img src="images/critterworld2.png" width="220" height="130" class="curve">
-						<p class="thick">A Whole New World<br/><br/></p>
-						<p>built with Java, complete with a Critter language, compiler, interpreter, simulator, and more.<br/></p>
-					</div>
-
-					<div class="project">
-						<img src="images/magafood.png" width="220" height="130" class="curve">
-						<p class="thick">Yelp ft. Google Maps<br/><br/></p>
-						<p>a fun Android project that lets you drool over pictures of food from nearby restaurants.</p>
-					</div>
+				<p><br/><br/>Here's how I interact with society. (To be completed. I swear I do other stuff)<br/><br/><br/></p>
 			</section>
 
 			<!--
 			<section id="hobbies">
-				<div id="hobby">
+				<div id="project">
 					<h1>Basketball<br/><br/></h1>
 					<p>Always up for a game of pickup. Avid follower of the NBA.<br/></p>
 				</div>
 
-				<div id="hobby">
+				<div id="project">
 					<h1>Hiking<br/><br/></h1>
 					<p>Nature is nice.<br/></p>
 				</div>
 
-				<div id="hobby">
+				<div id="project">
 					<h1>Reading<br/><br/></h1>
 					<p>Good books only.<br/></p>
 				</div>
 
-				<div id="hobby">
-					<h1>Drawing<br/><br/></h1>
-					<p>Typical shy doodler.<br/></p>
+				<div id="project">
+					<h1>Politics<br/><br/></h1>
+					<p>It is necessary to know what's going on with the world.<br/></p>
 				</div>
 			</section>
 			-->
