--- a/projects.html
+++ b/projects.html
@@ -16,6 +16,7 @@
 					<a href="index.html"><img src="images/me.png" class="curve"></a>
 					<h1 class="thick">CS is my main mojo.</h1>
 					<p>For more details, (git) checkout my Github!</p>
+					<a href="http://github.com/jz359" class="fa fa-linkedin"></a>
 					<a href="http://github.com/jz359" class="fa fa-github"></a>
 				</div>
 				<!--<h1 id="logo"><a href="index.html">Andy Zhang</a></h1>-->
