--- a/hobbies.html
+++ b/hobbies.html
@@ -24,8 +24,42 @@
 		</section>
 
 		<section id="main">
-			<p><br/><br/>Here's how I interact with society. (To be completed. I swear I do other stuff)<br/><br/><br/></p>
+			<p><br/><br/>Here are some ways I interact with society.<br/><br/><br/></p>
 		</section>
+
+		<div class="container">
+		  <img src="images/coolthing.png" alt="Avatar" class="image">
+		  <div class="overlay">
+		    <div class="text">I take photos.<br/><br/>Even simple cameras can capture cool stuff, like this Gaussian curve from Cornell's architecture building.</div>
+		  </div>
+		</div>
+
+		<br/><br/>
+
+		<div class="container">
+		  <img src="images/bball.png" alt="Avatar" class="image">
+		  <div class="overlay">
+		    <div class="text">I play basketball.<br/><br/>Always down for some pickup games. Avid follower of the NBA.</div>
+		  </div>
+		</div>
+
+		<br/><br/>
+
+		<div class="container">
+		  <img src="images/hike.png" alt="Avatar" class="image">
+		  <div class="overlay">
+		    <div class="text">I hike.<br/><br/>Sometimes to absurd places at absurd times. Like in the mountains of San Francisco at 4am.</div>
+		  </div>
+		</div>
+
+		<br/><br/>
+
+		<div class="container">
+		  <img src="images/goodbook.png" alt="Avatar" class="image">
+		  <div class="overlay">
+		    <div class="text">I read.<br/><br/>Publications, biographies, novels; I try to consume only the best stuff, like this amazing Steinbeck novel.</div>
+		  </div>
+		</div>
 
 		<!--
 		<section id="hobbies">
