--- a/projects.html
+++ b/projects.html
@@ -9,6 +9,7 @@
 		<!-- Add icon library -->
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	</head>
+
 	<body>
 		<section id="header">
 			<header>
@@ -24,25 +25,10 @@
 		</section>
 
 		<section id="main">
-			<p><br/><br/> <br/><br/><br/></p>
+			<p><br/><br/>My current gig is essentially making software eyes and brains for planes.<br/><br/><br/></p>
 		</section>
 
-		<!--
-		<button class="accordion">Section 1</button>
-		<div class="panel">
-		  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-		</div>
 
-		<button class="accordion">Section 2</button>
-		<div class="panel">
-		  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-		</div>
-
-		<button class="accordion">Section 3</button>
-		<div class="panel">
-		  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-		</div>
-		-->
 
 		<div class="col-container">
 		  <div class="col">
