--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 			</section>
 
 			<ul>
-				<a href="projects.html"><button class="button"><span>projects</span></button></a>
-				<a href="hobbies.html"><button class="button"><span>hobbies</span></button></a>
+				<a href="projects.html"><button class="button"><span>cs things</span></button></a>
+				<a href="hobbies.html"><button class="button"><span>non-cs things</span></button></a>
 			</ul>
 
 			<!--
