--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
 			</section>
 
 			<section id="main">
-				<p><br/><br/>I'm an undergrad at Cornell University studying Computer Science and Electrical Engineering.<br/>My favorite topics include machine vision/learning, signal processing, and computational theory.<br/><br/>In general, my life is composed of CS and non-CS things.<br/><br/><br/></p>
+				<p><br/><br/>I'm an undergrad at Cornell University studying Computer Science and Electrical Engineering.<br/>My favorite topics include machine vision/learning, signal processing, and computational theory.<br/><br/>My life can be divided into CS and non-CS things.<br/><br/><br/></p>
 			</section>
 
 			<ul>
-				<a href="projects.html"><button class="button"><span>cs things</span></button></a>
-				<a href="hobbies.html"><button class="button"><span>non-cs things</span></button></a>
+				<a href="projects.html"><button class="button"><span>cs</span></button></a>
+				<a href="hobbies.html"><button class="button"><span>non-cs</span></button></a>
 			</ul>
 
 			<!--
