--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 		<!-- Add icon library -->
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
 	</head>
 	<body>
 
