--- a/projects.html
+++ b/projects.html
@@ -5,9 +5,9 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-
 		<!-- Add icon library -->
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
 	</head>
 
 	<body>
@@ -29,32 +29,28 @@
 		</section>
 
 
+			<div id="wrapper">
+			  	<div id="first" class="container">
+				  <img src="images/blood.png" alt="Avatar" class="image">
+				  <div class="overlay">
+				    <div class="text">Cell_ID</div>
+				  </div>
+				</div>
 
-		<div class="col-container">
-		  <div class="col">
-		  	<img src="images/blood.png" width="220" height="130" class="item">
-		    <button class="accordion">Cell_ID</button>
-		    <div class="panel">
-		  		<p>a Python/OpenCV module that processes microscope images of white blood cells and classifies them.</p>
-			</div>
-		  </div>
+			  	<div id="second" class="container">
+				  <img src="images/critterworld2.png" alt="Avatar" class="image">
+				  <div class="overlay">
+				    <div class="text">Critter World</div>
+				  </div>
+				</div>
 
-		  <div class="col">
-			<img src="images/critterworld2.png" width="220" height="130" class="item">
-		    <button class="accordion">Critter World</button>
-		    <div class="panel">
-		  		<p>built with Java, complete with a Critter language, compiler, interpreter, and more.</p>
+			  	<div id="third" class="container">
+				  <img src="images/magafood.png" alt="Avatar" class="image">
+				  <div class="overlay">
+				    <div class="text">Visual Yelp</div>
+				  </div>
+				</div>
 			</div>
-		  </div>
-
-		  <div class="col">
-			<img src="images/magafood.png" width="220" height="130" class="item">
-		    <button class="accordion">Yelp x GMaps</button>
-		    <div class="panel">
-		  		<p>a fun Android project that lets you drool over pictures of food from nearby restaurants.</p>
-			</div>
-		  </div>
-		</div>
 		
 		<!--
 		<section id="projects">
@@ -91,7 +87,7 @@
 		<script src="assets/js/main.js"></script>
 
 		<script>
-			var acc = document.getElementsByClassName("accordion");
+			var acc = document.getElementsByClassName("image");
 			var i;
 
 			for (i = 0; i < acc.length; i++) {
