projects page is slightly less ugly now

--- a/projects.html
+++ b/projects.html
@@ -33,21 +33,21 @@
 			  	<div id="first" class="container">
 				  <img src="images/blood.png" alt="Avatar" class="image">
 				  <div class="overlay">
-				    <div class="text">Cell_ID</div>
+				    <div class="text">Cell_ID <br/><p class="small">a classifier for white blood cells using OpenCV and contour analysis.<br/></p></div>
 				  </div>
 				</div>
 
 			  	<div id="second" class="container">
 				  <img src="images/critterworld2.png" alt="Avatar" class="image">
 				  <div class="overlay">
-				    <div class="text">Critter World</div>
+				    <div class="text">Critter World <br/><p class="small">a simulated world with language and life modeled by a custom-built compiler, interpreter, and GUI.<br/></p></div>
 				  </div>
 				</div>
 
 			  	<div id="third" class="container">
 				  <img src="images/magafood.png" alt="Avatar" class="image">
 				  <div class="overlay">
-				    <div class="text">Visual Yelp</div>
+				    <div class="text">Visual Yelp <br/><p class="small">an Android application that uses the Yelp and Google Maps APIs to deliver food pictures of every restaurant queried by the user.<br/></p></div>
 				  </div>
 				</div>
 			</div>
