added stuff kek

--- a/projects.html
+++ b/projects.html
@@ -24,57 +24,51 @@
 			</header>
 		</section>
 
+		<br/><br/>
+
 		<section id="main">
-			<p><br/><br/>My current gig is essentially making software eyes and brains for planes.<br/><br/><br/></p>
-		</section>
-
-
-			<div id="wrapper">
-			  	<div id="first" class="container">
-				  <img src="images/blood.png" alt="Avatar" class="image">
-				  <div class="overlay">
-				    <div class="text">Cell_ID <br/><p class="small">a classifier for white blood cells using OpenCV and contour analysis.<br/></p></div>
-				  </div>
-				</div>
-
-			  	<div id="second" class="container">
-				  <img src="images/critterworld2.png" alt="Avatar" class="image">
-				  <div class="overlay">
-				    <div class="text">Critter World <br/><p class="small">a simulated world with language and life modeled by a custom-built compiler, interpreter, and GUI.<br/></p></div>
-				  </div>
-				</div>
-
-			  	<div id="third" class="container">
-				  <img src="images/magafood.png" alt="Avatar" class="image">
-				  <div class="overlay">
-				    <div class="text">Visual Yelp <br/><p class="small">an Android application that uses the Yelp and Google Maps APIs to deliver food pictures of every restaurant queried by the user.<br/></p></div>
-				  </div>
-				</div>
+			<br/><br/>
+			<div class="container">
+			  <img src="images/cuair2.png" alt="Avatar" class="image">
+			  <div class="overlay">
+			    <div class="text"><p class="small">self-flying planes!</p></div>
+			  </div>
 			</div>
-		
-		<!--
-		<section id="projects">
-				<div class="project">
-					<img src="images/blood.png" width="220" height="130">
-					<p class="thick">Robot Doctor Eyes<br/><br/></p>
-					<p>a Python/OpenCV module that processes microscope images of white blood cells and classifies them.<br/></p>
-				</div>
-
-				<div class="project">
-					<img src="images/critterworld2.png" width="220" height="130">
-					<p class="thick">A Whole New World<br/><br/></p>
-					<p>built with Java, complete with a Critter language, compiler, interpreter, simulator, and more.<br/></p>
-				</div>
-
-				<div class="project">
-					<img src="images/magafood.png" width="220" height="130">
-					<p class="thick">Yelp ft. Google Maps<br/><br/></p>
-					<p>a fun Android project that lets you drool over pictures of food from nearby restaurants.</p>
-				</div>
 		</section>
-		-->
+
+		<br/>
+
+		<section id="main">
+		<p>Current gig is essentially making software eyes and brains for planes.<br/><br/> Main line of work involves writing classifiers and image processing programs for identifying over a dozen different types of targets. I'm most comfortable with OpenCV and Python.</p>
+		</section>
+
+		<br/><br/><br/>
+
+		<div id="wrapper">
+		  	<div id="first" class="container">
+			  <img src="images/blood.png" alt="Avatar" class="image">
+			  <div class="overlay">
+			    <div class="text">Cell_ID <br/><p class="small">a classifier for white blood cells using OpenCV and contour analysis.<br/></p></div>
+			  </div>
+			</div>
+
+		  	<div id="second" class="container">
+			  <img src="images/critterworld2.png" alt="Avatar" class="image">
+			  <div class="overlay">
+			    <div class="text">Critter World <br/><p class="small">a simulated world with language and life modeled by a custom-built compiler, interpreter, and GUI.<br/></p></div>
+			  </div>
+			</div>
+
+		  	<div id="third" class="container">
+			  <img src="images/magafood.png" alt="Avatar" class="image">
+			  <div class="overlay">
+			    <div class="text">Visual Yelp <br/><p class="small">an Android application that uses the Yelp and Google Maps APIs to deliver food pictures of every restaurant queried by the user.<br/></p></div>
+			  </div>
+			</div>
+		</div>
+
 		<footer>
-		<p> </p>
+			<p> </p>
 		</footer>
 
 	<!-- Scripts -->
@@ -99,6 +93,16 @@
 			        } else {
 			            panel.style.display = "block";
 			        }
+			    }
+			}
+		</script>
+		<script>
+			function myFunction() {
+			    var x = document.getElementById('myDIV');
+			    if (x.style.display === 'none') {
+			        x.style.display = 'block';
+			    } else {
+			        x.style.display = 'none';
 			    }
 			}
 		</script>
