--- a/projects.html
+++ b/projects.html
@@ -27,6 +27,27 @@
 		<br/><br/>
 
 		<section id="main">
+			<p>Right now, my friends and I are building <a href="https://github.com/jz359/baeML">baeML</a>: a personalized content platform designed to combat the <a href="https://en.wikipedia.org/wiki/Echo_chamber_(media)">echo-chamber effect</a> in social media.</p><br/><br/>
+		</section>
+		
+		<section id="main">
+			<br/><br/>
+			<div class="container">
+			  <a href="https://github.com/jz359/baeML"><img src="images/baeml.png" alt="Avatar" class="image"></a>
+			  <div class="overlay">
+			    <div class="text"><p class="small">I use NLP to show you things you wouldn't see in your social media bubble!</p></div>
+			  </div>
+			</div>
+		</section>
+
+		<section id = "main">
+			<p>Key features include a React+Facebook API frontend, a Skip-gram learning model built with Tensorflow, a webcrawler, and a database.</p>
+		</section>
+
+
+		<br/><br/>
+
+		<section id="main">
 			<br/><br/>
 			<div class="container">
 			  <img src="images/cuair2.png" alt="Avatar" class="image">
@@ -39,7 +60,7 @@
 		<br/>
 
 		<section id="main">
-		<p>Current gig is essentially making software eyes and brains for planes.<br/><br/> Main line of work involves writing classifiers and image processing programs for identifying over a dozen different types of targets. I'm most comfortable with OpenCV and Python.</p>
+		<p>Ongoing gig is essentially making software eyes and brains for planes.<br/><br/> Main line of work involves writing classifiers and image processing programs for identifying over a dozen different types of targets. I'm most comfortable with OpenCV and Python.</p>
 		</section>
 
 		<br/><br/><br/>
