--- a/projects.html
+++ b/projects.html
@@ -8,6 +8,30 @@
 		<!-- Add icon library -->
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
+
+		<style>
+			block1 {
+				border-radius: 10px;
+				background-color: #ffe19b;
+			}
+
+			block2 {
+				border-radius: 10px;
+				background-color: #bfd7ff;
+			}
+
+			block3 {
+				border-radius: 10px;
+				background-color: #ffced2;
+			}
+
+			block4 {
+				text-align: center;
+				align-content: center;
+				border-radius: 10px;
+				background-color: #a3ffba;	
+			}
+		</style>
 	</head>
 
 	<body>
@@ -26,45 +50,77 @@
 
 		<br/><br/>
 
-		<section id="main">
-			<p>Right now, my friends and I are building <a href="https://github.com/jz359/baeML">baeML</a>: a personalized content platform designed to combat the <a href="https://en.wikipedia.org/wiki/Echo_chamber_(media)">echo-chamber effect</a> in social media.</p><br/><br/>
-		</section>
-		
-		<section id="main">
-			<br/><br/>
-			<div class="container">
-			  <a href="https://github.com/jz359/baeML"><img src="images/baeml.png" alt="Avatar" class="image"></a>
-			  <div class="overlay">
-			    <div class="text"><p class="small">I use NLP to show you things you wouldn't see in your social media bubble!</p></div>
-			  </div>
-			</div>
-		</section>
+		<block2>
+			<section id="main">
+				<p><br/>This summer, I am working at SRI International as a Computer Vision intern.</p><br/><br/>
+			</section>
+			
+			<section id="main">
+				<br/><br/>
+				<div class="container">
+				  <img src="images/sri.png" alt="Avatar" class="image">
+				  <div class="overlay">
+				    <div class="text"><p class="small">Princeton, NJ</p></div>
+				  </div>
+				</div>
+			</section>
 
-		<section id = "main">
-			<p>Key features include a React+Facebook API frontend, a Skip-gram learning model built with Tensorflow, a webcrawler, and a database.</p>
-		</section>
-
-
-		<br/><br/>
-
-		<section id="main">
-			<br/><br/>
-			<div class="container">
-			  <img src="images/cuair2.png" alt="Avatar" class="image">
-			  <div class="overlay">
-			    <div class="text"><p class="small">self-flying planes!</p></div>
-			  </div>
-			</div>
-		</section>
+			<section id = "main">
+				<p>Main responsibilities include developing and testing algorithms on large datasets for object recognition software.</p>
+			</section>
+			<br/>
+		</block2>
 
 		<br/>
 
-		<section id="main">
-		<p>Ongoing gig is essentially making software eyes and brains for planes.<br/><br/> Main line of work involves writing classifiers and image processing programs for identifying over a dozen different types of targets. I'm most comfortable with OpenCV and Python.</p>
-		</section>
+		<block1>
+			<section id="main">
+				<p><br/>On the side, my friends and I are building <a href="https://github.com/jz359/baeML">baeML</a>: a personalized content platform designed to combat the <a href="https://en.wikipedia.org/wiki/Echo_chamber_(media)">echo-chamber effect</a> in social media.</p><br/><br/>
+			</section>
+			
+			<section id="main">
+				<br/><br/>
+				<div class="container">
+				  <a href="https://github.com/jz359/baeML"><img src="images/baeml.png" alt="Avatar" class="image"></a>
+				  <div class="overlay">
+				    <div class="text"><p class="small">I use NLP to show you things you wouldn't see in your social media bubble!</p></div>
+				  </div>
+				</div>
+			</section>
 
-		<br/><br/><br/>
+			<section id = "main">
+				<p>Key features include a React+Facebook API frontend, a Skip-gram learning model built with Tensorflow, a webcrawler, and a database.</p>
+			</section>
+			<br/>
+		</block1>
 
+
+		<br/>
+
+		<block3>
+			<section id="main">
+				<p><br/>At Cornell, I use my spare time to make eyes and brains for planes.</p><br/><br/>
+			</section>
+			
+			<section id="main">
+				<br/><br/>
+				<div class="container">
+				  <img src="images/cuair2.png" alt="Avatar" class="image">
+				  <div class="overlay">
+				    <div class="text"><p class="small">self-flying planes!</p></div>
+				  </div>
+				</div>
+			</section>
+
+			<section id = "main">
+				<p>Main line of work involves writing classifiers and image processing programs for identifying over a dozen different types of targets. I'm most comfortable with OpenCV and Python.</p>
+			</section>
+			<br/>
+		</block3>
+
+		<br/>
+
+		<p><br/>...................................................</p><p>Here's some stuff I've made in the past.</p><br/>
 		<div id="wrapper">
 		  	<div id="first" class="container">
 			  <img src="images/blood.png" alt="Avatar" class="image">
@@ -87,6 +143,7 @@
 			  </div>
 			</div>
 		</div>
+		<br/>
 
 		<footer>
 			<p> </p>
